# glua-kit

./: LICENSE  MODULE.bazel  README.md  extension.bzl  go.mod  lua.bzl
build_defs/codegen/cc/: script_header.bzl
build_defs/lua/: compile.bzl
codegen/cc/: BUILD  header_gen.go
codegen/cc/testing/: BUILD  test.lua
go/vm/: BUILD  vm.go
testing/compilation/: BUILD  add.lua
testing/go/: BUILD  demo.go
tools/single_script/: BUILD  single_script.c
