module(
    name = "glua_kit",
    version = "0.0.1",
)

bazel_dep(name = "rules_go", version = "0.55.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

glua = use_extension("//:extension.bzl", "glua")
use_repo(
    glua,
    "lua_mainline",
)
